[package]
name = "search"
version = "0.1.2"
authors = ["Andrew Voss"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.6", features=["cargo", "unicode"]}
wild = "2.0.4"
regex = "1.5.5"
memchr = "2.4.1"

[profile.release]
strip = true
lto = true
